Fix wrong color

--- a/packages/cyberstorm/src/components/Layout/PackageDetailLayout/PackageChangeLog/PackageChangeLog.module.css
+++ b/packages/cyberstorm/src/components/Layout/PackageDetailLayout/PackageChangeLog/PackageChangeLog.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  --border-color: var(--color-surface--7);
+  --border-color: var(--color-surface--5);
 }
 
 .title {
